Fixed config file. AuthServer line was not being parsed properly because it contained a comment in the same line.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@12 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/server/data_files/local_1.cfg
+++ b/server/data_files/local_1.cfg
@@ -4,9 +4,9 @@ db_name = "segs"
 db_user = "segsadmin"
 db_pass = "secretpass"
 
-
+# warning the port here has to be 2106, as it's the address most clients expect to see
 [AuthServer] 
-listen_addr= "0.0.0.0:2106" # warning the port here has to be 2106, as it's the address most clients expect to see
+listen_addr= "0.0.0.0:2106"
 
 [GameServer] 
 server_name  ="first server"
