Map Packet moved some methods from .h to .cpp cosmetic changes to main CMakefile
git-svn-id: svn://svn.code.sf.net/p/segs/code2@23 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -4,11 +4,12 @@ PROJECT(SEGS)
 
 SET(UNICODE )
 
-IF(WIN32)
-  IF (CMAKE_CXX_COMPILER MATCHES "^cl$")
-#	SET ( CMAKE_CXX_FLAGS_DEBUG "/MTd /Zi /Od /RTC1" )
-  ENDIF (CMAKE_CXX_COMPILER MATCHES "^cl$")
-ENDIF(WIN32)
+IF(CMAKE_CXX_COMPILER MATCHES cl)
+     IF(CMAKE_GENERATOR STREQUAL "Visual Studio 8 2005")
+       SET(CMAKE_CXX_FLAGS_DEBUG " /D \"_CRT_SECURE_NO_WARNINGS\" ${CMAKE_CXX_FLAGS_DEBUG}"  )
+       SET(CMAKE_CXX_FLAGS_RELEASE " /D \"_CRT_SECURE_NO_WARNINGS\" ${CMAKE_CXX_FLAGS_RELEASE}")
+     ENDIF(CMAKE_GENERATOR STREQUAL "Visual Studio 8 2005")
+ENDIF (CMAKE_CXX_COMPILER MATCHES cl)
 
 # just testing 
 OPTION(BUILD_SEPARATE "When set to 1 this will build each server as a separate executable file" ON)
@@ -53,5 +54,6 @@ ADD_SUBDIRECTORY(AdminServer)
 ADD_SUBDIRECTORY(GameServer)
 ADD_SUBDIRECTORY(MapServer)
 ADD_SUBDIRECTORY(AuthServer)
+ADD_SUBDIRECTORY(Implementations)
 
 EXPORT_LIBRARY_DEPENDENCIES(DEPENDENT.TXT)
