--- a/client/examples/CMakeLists.txt
+++ b/client/examples/CMakeLists.txt
@@ -1,3 +1,10 @@
 PROJECT(example_client)
+
+SET(WX_INTERNAL_PATH /lib/8_0/vc_lib)
+SET(wxWidgets_LIB_DIR,$ENV{WXDIR}${WX_INTERNAL_PATH})
+FIND_PACKAGE(wxWidgets REQUIRED)
+
+INCLUDE_DIRECTORIES(${wxWidgets_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
+
 SUBDIRS(src)
