removed some cruft ( namely old packet classes Packet.h/PacketUtil.h) moved some includes from server common to global common directory.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@29 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ IF(CMAKE_CXX_COMPILER MATCHES cl)
      ENDIF(CMAKE_GENERATOR STREQUAL "Visual Studio 8 2005")
 ENDIF (CMAKE_CXX_COMPILER MATCHES cl)
 
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/include)
+
 ADD_SUBDIRECTORY(server)
 ADD_SUBDIRECTORY(client)
 
