--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
+
+PROJECT(SEGS)
+
 SET(MAIN_INCLUDE_PATH $ENV{INCLUDE} CACHE PATH "Includes")
 SET(MAIN_LIB_PATH $ENV{LIB} CACHE PATH "Libraries")
 
@@ -12,6 +15,7 @@ ENDIF (CMAKE_CXX_COMPILER MATCHES cl)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/include)
 
+ADD_SUBDIRECTORY(common)
 ADD_SUBDIRECTORY(server)
 ADD_SUBDIRECTORY(client)
 
