Example should build now ( still very clunky wxwidgets, needs some cmake love) Regenerated example files with new wxglade Removed include file dependencies on opcodes enumeration (ideally those should be split into generic/game specific parts)
git-svn-id: svn://svn.code.sf.net/p/segs/code2@35 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/client/examples/src/CMakeLists.txt
+++ b/client/examples/src/CMakeLists.txt
@@ -12,5 +12,11 @@ add_definitions(
   -D_LIB
   -D__WXDEBUG__
 )
-
-ADD_LIBRARY( wxTools STATIC ${SOURCES} )
+ADD_DEFINITIONS(${wxWidgets_DEFINITIONS})
+ADD_EXECUTABLE( segs_client_example_01 ${SOURCES} )
+TARGET_LINK_LIBRARIES(segs_client_example_01 segs_common 
+						${ACE_lib} 
+						${ZLIB_LIBRARIES}
+						${CMAKE_THREAD_LIBS_INIT}
+                                                ${wxWidgets_LIBRARIES}) 
+ADD_DEPENDENCIES(segs_client_example_01 authserver_lib segs_common gameserver_lib) 
