More moves from server specific to common Added placeholder for client session class
git-svn-id: svn://svn.code.sf.net/p/segs/code2@36 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/common/src/CMakeLists.txt
+++ b/common/src/CMakeLists.txt
@@ -4,11 +4,22 @@ SET (segs_common_SRCS
 BitStream.cpp
 Buffer.cpp 
 PacketBase.cpp
+CRUDP_Packet.cpp
+CRUDP_Protocol.cpp
+PacketCodec.cpp
+GameProtocol.cpp
+GameProtocolHandler.cpp
 ../include/Base.h
 ../include/BitStream.h
 ../include/Buffer.h
 ../include/ConfigExtension.h
 ../include/PacketBase.h
 ../include/version.h
+../include/CRUDP_Packet.h
+../include/CRUDP_Protocol.h
+../include/GameProtocol.h
+../include/GameProtocolHandler.h
+../include/PacketCodec.h
 )
+
 ADD_LIBRARY(segs_common STATIC ${segs_common_SRCS})
