Splitting Command Handler into common/client/server parts This rev might even compile  :)
git-svn-id: svn://svn.code.sf.net/p/segs/code2@38 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/server/Common/src/CMakeLists.txt
+++ b/server/Common/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 # $Id: CMakeLists.txt 301 2006-12-26 15:50:44Z nemerle $
 
 SET (segs_server_common_SRCS 
+ServerProtocolHandler.cpp
 AdminServerInterface.cpp
 AuthServerInterface.cpp
 GameServerInterface.cpp
