* Added Avatar class ( pretty much a placeholder) * changed some build scripts to use standarized FindwxWidgets module * Added a useful class for embedding Ogre inside wxWidgets
git-svn-id: svn://svn.code.sf.net/p/segs/code2@41 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/client/examples/CMakeLists.txt
+++ b/client/examples/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET(WX_INTERNAL_PATH /lib/8_0/vc_lib)
-SET(wxWidgets_LIB_DIR,$ENV{WXDIR}${WX_INTERNAL_PATH})
-FIND_PACKAGE(wxWidgets REQUIRED)
+#SET(WX_INTERNAL_PATH /lib/vc_lib) # this is for single compiler version of wxwidgets
+SET(wxWidgets_LIB_DIR $ENV{WXWIN}/${WX_INTERNAL_PATH})
+FIND_PACKAGE(wxWidgets REQUIRED base core)
 
 INCLUDE_DIRECTORIES(${wxWidgets_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
