few fixes to build system ( mainly related to getting build wxwidgets info) Example client now runs wxwidgets as a ACE thread, so we can start using proper ACE Reactor instance to work with connections etc.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@43 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,5 +1,9 @@
-SET(UNICODE )
+SET(UNICODE TRUE)
 IF(WIN32)
+	IF(UNICODE)
+		ADD_DEFINITIONS(-D_UNICODE -UNICODE)
+	ENDIF(UNICODE)
+
   IF (CMAKE_CXX_COMPILER MATCHES "^cl$")
 #	SET ( CMAKE_CXX_FLAGS_DEBUG "/MTd /Zi /Od /RTC1" )
   ENDIF (CMAKE_CXX_COMPILER MATCHES "^cl$")
