--- a/common/Utilities/GUI_Related/CMakeLists.txt
+++ b/common/Utilities/GUI_Related/CMakeLists.txt
@@ -5,9 +5,9 @@ IF(UNICODE)
   ADD_DEFINITIONS(-D_UNICODE -UNICODE)
 ENDIF(UNICODE)
 
-
+SET(wxWidgets_USE_LIBS base core)
 FIND_PACKAGE(Threads REQUIRED)
-FIND_PACKAGE(wxWidgets REQUIRED)
+FIND_PACKAGE(wxWidgets REQUIRED base core)
 FIND_PACKAGE(OGRE REQUIRED)
 FIND_PACKAGE(Boost)
 
