--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(MAIN_INCLUDE_PATH $ENV{INCLUDE} CACHE PATH "Includes")
 SET(MAIN_LIB_PATH $ENV{LIB} CACHE PATH "Libraries")
 
 SET(CMAKE_INCLUDE_PATH ${MAIN_INCLUDE_PATH})
-SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts)
 
 
 IF(CMAKE_CXX_COMPILER MATCHES cl)
