Added 2 very nice macros to CMake SEGS_ADD_COMPONENT will add given component to current target. either as a source bundle,or as a dependency. SEGS_REGISTER_COMPONENT(name include_dir sources includes) sets proper cmake variables for given component Using those two, i've split common directory into separate parts.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@50 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ SET(MAIN_LIB_PATH $ENV{LIB} CACHE PATH "Libraries")
 SET(CMAKE_INCLUDE_PATH ${MAIN_INCLUDE_PATH})
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts)
 
+INCLUDE(SEGS_Components)
 
 IF(CMAKE_CXX_COMPILER MATCHES cl)
      IF(CMAKE_GENERATOR STREQUAL "Visual Studio 8 2005")
@@ -16,7 +17,9 @@ ENDIF (CMAKE_CXX_COMPILER MATCHES cl)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/include)
 
+ADD_SUBDIRECTORY(Components)
 ADD_SUBDIRECTORY(common)
 ADD_SUBDIRECTORY(server)
 ADD_SUBDIRECTORY(client)
+
 
