git-svn-id: svn://svn.code.sf.net/p/segs/code2@53 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/server/AdminServer/src/CMakeLists.txt
+++ b/server/AdminServer/src/CMakeLists.txt
@@ -1,12 +1,27 @@
 # $Id: CMakeLists.txt 253 2006-08-31 22:00:14Z malign $
 
-SET (adminserver_SRCS 
-AdminServer.cpp
-AdminDatabase.cpp
-../include/AdminDatabase.h
-../include/AdminServer.h
-
+SET(target_CPP
+${CMAKE_CURRENT_SOURCE_DIR}/src/AdminServer.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/AdminDatabase.cpp
 )
+SET(target_INCLUDE
+${CMAKE_CURRENT_SOURCE_DIR}/include/AdminDatabase.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/AdminServer.h
+)
+
+SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+SET(target_DEPENDS "")
+
+SEGS_ADD_COMPONENT(segs_common LIB)
+
+INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
+
+SET (target_SOURCES
+${target_CPP}
+${target_INCLUDE}
+)
+
 ADD_LIBRARY(adminserver_lib STATIC ${adminserver_SRCS})
-TARGET_LINK_LIBRARIES(adminserver_lib segs_common)
-ADD_DEPENDENCIES(adminserver_lib segs_common)
+
+TARGET_LINK_LIBRARIES(adminserver_lib ${target_DEPENDS})
+ADD_DEPENDENCIES(adminserver_lib ${target_DEPENDS})
