Added 3 more include paths to silence compilation errors for missing headers
git-svn-id: svn://svn.code.sf.net/p/segs/code2@54 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -42,6 +42,9 @@ FIND_PACKAGE(SWIG)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Common/include)
 INCLUDE_DIRECTORIES(../common/include)
+INCLUDE_DIRECTORIES(../Components/Common/GrowingBuffer/include)
+INCLUDE_DIRECTORIES(../Components/Common/CRUDP_Protocol/include)
+INCLUDE_DIRECTORIES(../Components/Common/Bitstream/include)
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ACE_path})
 INCLUDE_DIRECTORIES(${PGSQL_path})
