--- a/Projects/CoX/Servers/GameServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/GameServer/CMakeLists.txt
@@ -22,6 +22,7 @@ SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 SET(target_DEPENDS "")
 
 SEGS_ADD_COMPONENT(segs_common LIB)
+SEGS_ADD_COMPONENT(segs_server_common LIB)
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 
