Final removal. Created Example Project directory structure, and moved pseudo client with wxWidgets Interface, there
git-svn-id: svn://svn.code.sf.net/p/segs/code2@60 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CMakeLists.txt
+++ b/Projects/CMakeLists.txt
@@ -1,5 +1,16 @@
 # $Id: CMakeLists.txt 306 2007-01-23 12:16:25Z nemerle $
 SET(BUILD_CoX TRUE CACHE BOOL "Should the CoX emulation be built?")
+SET(BUILD_Examples TRUE CACHE BOOL "Should the Example Projects be built?")
+
 IF(BUILD_CoX)
 	ADD_SUBDIRECTORY(CoX)
 ENDIF(BUILD_CoX)
+
+IF(BUILD_Examples)
+	SET(BUILD_Example01 TRUE CACHE BOOL "Should the first example be built?")
+    IF(BUILD_Example01)
+        ADD_SUBDIRECTORY(Example01)
+    ENDIF(BUILD_Example01)
+ENDIF(BUILD_Examples)
+
+
