removed redundant libraries, also StarkRavingMad's second fix
git-svn-id: svn://svn.code.sf.net/p/segs/code2@63 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Components/Common/Bitstream/CMakeLists.txt
+++ b/Components/Common/Bitstream/CMakeLists.txt
@@ -6,16 +6,25 @@ SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Bitstream.h
 )
 
+# ACE framework
+FIND_PATH(ACE_path ACE.h
+  /usr/local/include/ace
+  /usr/include/ace
+)
+FIND_PACKAGE(ZLIB REQUIRED)
 
 SET(target_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 SEGS_ADD_COMPONENT(GrowingBuffer SOURCE)
 
-INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 SET (target_SOURCES
 ${target_CPP}
 ${target_INCLUDE}
 )
+
+INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${ACE_path})
+INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 
 SEGS_REGISTER_COMPONENT(Bitstream "${target_INCLUDE_DIR}" "${target_CPP}" "${target_INCLUDE}" )
 
