AuthProtocol split, phase 1
git-svn-id: svn://svn.code.sf.net/p/segs/code2@69 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Common/AuthProtocol/CMakeLists.txt
+++ b/Projects/CoX/Common/AuthProtocol/CMakeLists.txt
@@ -1,8 +1,16 @@
 
 # $Id:$
 SET(target_CPP
+${CMAKE_CURRENT_SOURCE_DIR}/src/AuthConnection.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/AuthPacket.cpp 
+${CMAKE_CURRENT_SOURCE_DIR}/src/AuthPacketCodec.cpp 
+${CMAKE_CURRENT_SOURCE_DIR}/src/AuthProtocol.cpp 
 )
 SET(target_INCLUDE
+${CMAKE_CURRENT_SOURCE_DIR}/include/AuthConnection.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/AuthPacket.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/AuthPacketCodec.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/AuthProtocol.h
 )
 SET(target_INCLUDE_DIR "")
 # add components here
@@ -14,4 +22,5 @@ ${target_INCLUDE}
 )
 
 #ADD_LIBRARY(AuthProtocol STATIC ${target_SOURCES})
+
 SEGS_REGISTER_COMPONENT(AuthProtocol "${target_INCLUDE_DIR}" "${target_CPP}" "${target_INCLUDE}" )
