Fix for the Component registration, now pulls in all previous lib's,  I have no idea why it worked on VS
git-svn-id: svn://svn.code.sf.net/p/segs/code2@74 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Servers/AuthServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/AuthServer/CMakeLists.txt
@@ -35,7 +35,7 @@ ADD_LIBRARY(authserver_lib STATIC ${target_SOURCES})
 IF(BUILD_SEPARATE)
 	ADD_DEFINITIONS(-DSEPARATE)
 	ADD_EXECUTABLE(authserver ${authserver_standaloneSRCS})
-    TARGET_LINK_LIBRARIES(authserver   ${target_DEPENDS}
+    TARGET_LINK_LIBRARIES(authserver   ${target_DEPENDS} authserver_lib
                     						${ACE_lib} 
                     						${PGSQL_lib} 
                     						${ZLIB_LIBRARIES}
