Templatized AuthProtocol It's concrete instances are assigned to m_current_proto in constructors of classes inheriting from AuthConnection This removes dependency between AuthProtocol.h and AuthFSM.h Also, moved AuthOpcodes.h to AuthProtocol component
git-svn-id: svn://svn.code.sf.net/p/segs/code2@77 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Common/AuthProtocol/CMakeLists.txt
+++ b/Projects/CoX/Common/AuthProtocol/CMakeLists.txt
@@ -9,6 +9,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/src/packets/authserverlist.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/AuthConnection.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/AuthOpcodes.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/AuthPacket.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/AuthPacketCodec.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/AuthProtocol.h
