--- a/Projects/CoX/Servers/AuthServer/CMakeLists.txt
+++ b/Projects/CoX/Servers/AuthServer/CMakeLists.txt
@@ -3,6 +3,7 @@
 SET(target_CPP
 ${CMAKE_CURRENT_SOURCE_DIR}/src/AuthClient.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/AuthClientServicer.cpp 
+${CMAKE_CURRENT_SOURCE_DIR}/src/AuthConnection_ServerSide.cpp 
 ${CMAKE_CURRENT_SOURCE_DIR}/src/AuthFSM.cpp 
 ${CMAKE_CURRENT_SOURCE_DIR}/src/AuthServer.cpp 
 )
