--- a/Projects/Example01/Clients/wxWidgetsBased/src/CMakeLists.txt
+++ b/Projects/Example01/Clients/wxWidgetsBased/src/CMakeLists.txt
@@ -20,6 +20,8 @@ ADD_DEFINITIONS(
 )
 
 SEGS_ADD_COMPONENT(CRUDP_Protocol SOURCE)
+SEGS_ADD_COMPONENT(AuthProtocol SOURCE)
+
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 SET (target_SOURCES
 ${target_CPP}
