pktAuthServerList no longer depends on server managor, or any gameserver interface, it's internal variables are set by add_game_server() method ExampleClient01 doesn't really need CRUDP_Protocol. GameServerInterface now inherits from IGameServer Few simplifications made in AuthFSM_Default.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@78 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/Example01/Clients/wxWidgetsBased/CMakeLists.txt
+++ b/Projects/Example01/Clients/wxWidgetsBased/CMakeLists.txt
@@ -15,7 +15,49 @@ IF (wxWidgets_FOUND)
 ENDIF (wxWidgets_FOUND)
 
 
-INCLUDE_DIRECTORIES(${wxWidgets_INCLUDE_DIRS})
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
+SET(target_CPP
+${CMAKE_CURRENT_SOURCE_DIR}/src/generated/main.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/generated/LoginDialog.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/Avatar.cpp
+)
+SET(target_INCLUDE
+${CMAKE_CURRENT_SOURCE_DIR}/include/generated/LoginDialog.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/Avatar.h
+${CMAKE_CURRENT_SOURCE_DIR}/include/Example01.h
+)
 
-SUBDIRS(src)
+SET(target_INCLUDE_DIR 
+	${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/generated
+)
+
+ADD_DEFINITIONS( 
+  -D_CRT_SECURE_NO_WARNINGS
+  -D_LIB
+  -D__WXDEBUG__
+)
+
+SEGS_ADD_COMPONENT(GrowingBuffer SOURCE)
+SEGS_ADD_COMPONENT(AuthProtocol SOURCE)
+
+INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${wxWidgets_INCLUDE_DIRS})
+
+SET (target_SOURCES
+${target_CPP}
+${target_INCLUDE}
+)
+
+IF(WIN32)
+	ADD_EXECUTABLE( segs_client_example_01 WIN32 ${target_SOURCES} )
+	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /subsystem:windows") # strangely adding WIN32 didn't set /subsystem:windows
+ELSE(WIN32)
+	ADD_EXECUTABLE( segs_client_example_01 ${target_SOURCES} )
+ENDIF(WIN32)
+
+TARGET_LINK_LIBRARIES(segs_client_example_01 segs_common 
+						${ACE_lib} 
+						${ZLIB_LIBRARIES}
+						${CMAKE_THREAD_LIBS_INIT}
+                        ${wxWidgets_LIBRARIES}) 
+ADD_DEPENDENCIES(segs_client_example_01 authserver_lib segs_common gameserver_lib) 
