Split out client Auth Component, communication with auth server is encapsulated in AuthObserver(incoming events)/AuthInterface ( outgoing calls) Changed Boost includes to conform with variables set by FindBoost. Auth login packet got it's own cpp file in preparation for password/login hashing. AuthConnection is now hiding it's sendBytes method ( only protocols get to use it) IAuthProtocol hides ReceivedBytes for exclusive use by AuthConnection.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@81 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Common/AuthProtocol/CMakeLists.txt
+++ b/Projects/CoX/Common/AuthProtocol/CMakeLists.txt
@@ -6,6 +6,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/src/AuthPacket.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/src/AuthPacketCodec.cpp 
 ${CMAKE_CURRENT_SOURCE_DIR}/src/AuthProtocol.cpp 
 ${CMAKE_CURRENT_SOURCE_DIR}/src/packets/authserverlist.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/src/packets/authlogin.cpp
 )
 SET(target_INCLUDE
 ${CMAKE_CURRENT_SOURCE_DIR}/include/AuthConnection.h
@@ -21,7 +22,13 @@ ${CMAKE_CURRENT_SOURCE_DIR}/include/Packets/authserverlist.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Packets/authselectserver.h
 ${CMAKE_CURRENT_SOURCE_DIR}/include/Packets/authselectserverresponse.h
 )
-SET(target_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include" "${CMAKE_CURRENT_SOURCE_DIR}/include/Packets")
+FIND_PACKAGE(Boost)
+
+SET(target_INCLUDE_DIR 
+	"${CMAKE_CURRENT_SOURCE_DIR}/include" 
+	"${CMAKE_CURRENT_SOURCE_DIR}/include/Packets"
+	${Boost_INCLUDE_DIRS}
+)
 # add components here
 # end of additional components
 
