--- a/Projects/Example01/Clients/wxWidgetsBased/CMakeLists.txt
+++ b/Projects/Example01/Clients/wxWidgetsBased/CMakeLists.txt
@@ -37,8 +37,7 @@ ADD_DEFINITIONS(
   -D__WXDEBUG__
 )
 
-SEGS_ADD_COMPONENT(GrowingBuffer SOURCE)
-SEGS_ADD_COMPONENT(AuthProtocol SOURCE)
+SEGS_ADD_COMPONENT(Auth SOURCE)
 
 INCLUDE_DIRECTORIES(${target_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${wxWidgets_INCLUDE_DIRS})
