--- a/Components/Client/Utilities/GUI_Related/CMakeLists.txt
+++ b/Components/Client/Utilities/GUI_Related/CMakeLists.txt
@@ -15,7 +15,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
 INCLUDE_DIRECTORIES(${OGRE_path})
 INCLUDE_DIRECTORIES(${ACE_path})
-INCLUDE_DIRECTORIES(${BOOST_path})
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${wxWidgets_INCLUDE_DIRS})
 
 
