--- a/Projects/Example01/Clients/CMakeLists.txt
+++ b/Projects/Example01/Clients/CMakeLists.txt
@@ -1,6 +1,6 @@
 
+ADD_SUBDIRECTORY(Auth)
 FIND_PACKAGE(wxWidgets REQUIRED base core)
-
 IF(wxWidgets_FOUND)
     ADD_SUBDIRECTORY(wxWidgetsBased)
 ENDIF(wxWidgets_FOUND)
