Added several new locations to BOOST_path for the object_pool.hpp header which resides under pool/ in some cases. BOOST_path was not being defined automagically during cmake execution because of this.
git-svn-id: svn://svn.code.sf.net/p/segs/code2@82 a19be42f-918d-4297-8077-ab25d1e4f51f

--- a/Projects/CoX/Servers/CMakeLists.txt
+++ b/Projects/CoX/Servers/CMakeLists.txt
@@ -22,8 +22,11 @@ FIND_LIBRARY(ACE_lib NAMES libACE.so ACE ACEd.lib libACE.a PATHS /usr/lib /usr/l
 # BOOST
 FIND_PATH(BOOST_path object_pool.hpp
    /usr/local/include/boost
-   /usr/include/boost/
+   /usr/local/include/boost/pool
+   /usr/include/boost
+   /usr/include/boost/pool
    /include/boost
+   /include/boost/pool
 )
 # PostgreSQL
 FIND_PATH(PGSQL_path libpq-fe.h
