--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@ SET(MAIN_INCLUDE_PATH $ENV{INCLUDE} CACHE PATH "Includes")
 SET(MAIN_LIB_PATH $ENV{LIB} CACHE PATH "Libraries")
 
 SET(CMAKE_INCLUDE_PATH ${MAIN_INCLUDE_PATH})
-SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts)
+SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts;${CMAKE_MODULE_PATH})
+
+CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
+
 
 INCLUDE(SEGS_Components)
 
